feat: add user map
