# docs/static/openapi.json
@@ -1,41 +1,1 @@
-{
-  "id": "tokenchain",
-  "consumes": ["application/json"],
-  "produces": ["application/json"],
-  "swagger": "2.0",
-  "info":
-    {
-      "description": "Chain tokenchain REST API",
-      "title": "HTTP API Console",
-      "contact": { "name": "tokenchain" },
-      "version": "version not set",
-    },
-  "paths": {},
-  "definitions":
-    {
-      "google.protobuf.Any":
-        {
-          "type": "object",
-          "properties": { "@type": { "type": "string" } },
-          "additionalProperties": {},
-        },
-      "google.rpc.Status":
-        {
-          "type": "object",
-          "properties":
-            {
-              "code": { "type": "integer", "format": "int32" },
-              "details":
-                {
-                  "type": "array",
-                  "items":
-                    {
-                      "type": "object",
-                      "$ref": "#/definitions/google.protobuf.Any",
-                    },
-                },
-              "message": { "type": "string" },
-            },
-        },
-    },
-}
+{"id":"tokenchain","consumes":["application/json"],"produces":["application/json"],"swagger":"2.0","info":{"description":"Chain tokenchain REST API","title":"HTTP API Console","contact":{"name":"tokenchain"},"version":"version not set"},"paths":{"/tokenchain.core.v1.Msg/CreateUser":{"post":{"tags":["Msg"],"summary":"CreateUser defines the CreateUser RPC.","operationId":"TokenchainMsg_CreateUser","parameters":[{"description":"MsgCreateUser defines the MsgCreateUser message.","name":"body","in":"body","required":true,"schema":{"$ref":"#/definitions/tokenchain.core.v1.MsgCreateUser"}}],"responses":{"200":{"description":"A successful response.","schema":{"$ref":"#/definitions/tokenchain.core.v1.MsgCreateUserResponse"}},"default":{"description":"An unexpected error response.","schema":{"$ref":"#/definitions/google.rpc.Status"}}}}},"/tokenchain.core.v1.Msg/DeleteUser":{"post":{"tags":["Msg"],"summary":"DeleteUser defines the DeleteUser RPC.","operationId":"TokenchainMsg_DeleteUser","parameters":[{"description":"MsgDeleteUser defines the MsgDeleteUser message.","name":"body","in":"body","required":true,"schema":{"$ref":"#/definitions/tokenchain.core.v1.MsgDeleteUser"}}],"responses":{"200":{"description":"A successful response.","schema":{"$ref":"#/definitions/tokenchain.core.v1.MsgDeleteUserResponse"}},"default":{"description":"An unexpected error response.","schema":{"$ref":"#/definitions/google.rpc.Status"}}}}},"/tokenchain.core.v1.Msg/UpdateParams":{"post":{"tags":["Msg"],"summary":"UpdateParams defines a (governance) operation for updating the module\nparameters. The authority defaults to the x/gov module account.","operationId":"TokenchainMsg_UpdateParams","parameters":[{"description":"MsgUpdateParams is the Msg/UpdateParams request type.","name":"body","in":"body","required":true,"schema":{"$ref":"#/definitions/tokenchain.core.v1.MsgUpdateParams"}}],"responses":{"200":{"description":"A successful response.","schema":{"$ref":"#/definitions/tokenchain.core.v1.MsgUpdateParamsResponse"}},"default":{"description":"An unexpected error response.","schema":{"$ref":"#/definitions/google.rpc.Status"}}}}},"/tokenchain.core.v1.Msg/UpdateUser":{"post":{"tags":["Msg"],"summary":"UpdateUser defines the UpdateUser RPC.","operationId":"TokenchainMsg_UpdateUser","parameters":[{"description":"MsgUpdateUser defines the MsgUpdateUser message.","name":"body","in":"body","required":true,"schema":{"$ref":"#/definitions/tokenchain.core.v1.MsgUpdateUser"}}],"responses":{"200":{"description":"A successful response.","schema":{"$ref":"#/definitions/tokenchain.core.v1.MsgUpdateUserResponse"}},"default":{"description":"An unexpected error response.","schema":{"$ref":"#/definitions/google.rpc.Status"}}}}},"/tokenchain/core/v1/params":{"get":{"tags":["Query"],"summary":"Parameters queries the parameters of the module.","operationId":"TokenchainQuery_Params","responses":{"200":{"description":"A successful response.","schema":{"$ref":"#/definitions/tokenchain.core.v1.QueryParamsResponse"}},"default":{"description":"An unexpected error response.","schema":{"$ref":"#/definitions/google.rpc.Status"}}}}},"/tokenchain/core/v1/user":{"get":{"tags":["Query"],"summary":"ListUser defines the ListUser RPC.","operationId":"TokenchainQuery_ListUser","parameters":[{"type":"string","format":"byte","description":"key is a value returned in PageResponse.next_key to begin\nquerying the next page most efficiently. Only one of offset or key\nshould be set.","name":"pagination.key","in":"query"},{"type":"string","format":"uint64","description":"offset is a numeric offset that can be used when key is unavailable.\nIt is less efficient than using key. Only one of offset or key should\nbe set.","name":"pagination.offset","in":"query"},{"type":"string","format":"uint64","description":"limit is the total number of results to be returned in the result page.\nIf left empty it will default to a value to be set by each app.","name":"pagination.limit","in":"query"},{"type":"boolean","description":"count_total is set to true  to indicate that the result set should include\na count of the total number of items available for pagination in UIs.\ncount_total is only respected when offset is used. It is ignored when key\nis set.","name":"pagination.count_total","in":"query"},{"type":"boolean","description":"reverse is set to true if results are to be returned in the descending order.","name":"pagination.reverse","in":"query"}],"responses":{"200":{"description":"A successful response.","schema":{"$ref":"#/definitions/tokenchain.core.v1.QueryAllUserResponse"}},"default":{"description":"An unexpected error response.","schema":{"$ref":"#/definitions/google.rpc.Status"}}}}},"/tokenchain/core/v1/user/{index}":{"get":{"tags":["Query"],"summary":"ListUser Queries a list of User items.","operationId":"TokenchainQuery_GetUser","parameters":[{"type":"string","name":"index","in":"path","required":true}],"responses":{"200":{"description":"A successful response.","schema":{"$ref":"#/definitions/tokenchain.core.v1.QueryGetUserResponse"}},"default":{"description":"An unexpected error response.","schema":{"$ref":"#/definitions/google.rpc.Status"}}}}}},"definitions":{"cosmos.base.query.v1beta1.PageRequest":{"description":"message SomeRequest {\n         Foo some_parameter = 1;\n         PageRequest pagination = 2;\n }","type":"object","title":"PageRequest is to be embedded in gRPC request messages for efficient\npagination. Ex:","properties":{"count_total":{"description":"count_total is set to true  to indicate that the result set should include\na count of the total number of items available for pagination in UIs.\ncount_total is only respected when offset is used. It is ignored when key\nis set.","type":"boolean"},"key":{"description":"key is a value returned in PageResponse.next_key to begin\nquerying the next page most efficiently. Only one of offset or key\nshould be set.","type":"string","format":"byte"},"limit":{"description":"limit is the total number of results to be returned in the result page.\nIf left empty it will default to a value to be set by each app.","type":"string","format":"uint64"},"offset":{"description":"offset is a numeric offset that can be used when key is unavailable.\nIt is less efficient than using key. Only one of offset or key should\nbe set.","type":"string","format":"uint64"},"reverse":{"description":"reverse is set to true if results are to be returned in the descending order.","type":"boolean"}}},"cosmos.base.query.v1beta1.PageResponse":{"description":"PageResponse is to be embedded in gRPC response messages where the\ncorresponding request message has used PageRequest.\n\n message SomeResponse {\n         repeated Bar results = 1;\n         PageResponse page = 2;\n }","type":"object","properties":{"next_key":{"description":"next_key is the key to be passed to PageRequest.key to\nquery the next page most efficiently. It will be empty if\nthere are no more results.","type":"string","format":"byte"},"total":{"type":"string","format":"uint64","title":"total is total number of results available if PageRequest.count_total\nwas set, its value is undefined otherwise"}}},"google.protobuf.Any":{"type":"object","properties":{"@type":{"type":"string"}},"additionalProperties":{}},"google.rpc.Status":{"type":"object","properties":{"code":{"type":"integer","format":"int32"},"details":{"type":"array","items":{"type":"object","$ref":"#/definitions/google.protobuf.Any"}},"message":{"type":"string"}}},"tokenchain.core.v1.MsgCreateUser":{"description":"MsgCreateUser defines the MsgCreateUser message.","type":"object","properties":{"address":{"type":"string"},"creator":{"type":"string"},"description":{"type":"string"},"index":{"type":"string"},"username":{"type":"string"}}},"tokenchain.core.v1.MsgCreateUserResponse":{"description":"MsgCreateUserResponse defines the MsgCreateUserResponse message.","type":"object"},"tokenchain.core.v1.MsgDeleteUser":{"description":"MsgDeleteUser defines the MsgDeleteUser message.","type":"object","properties":{"creator":{"type":"string"},"index":{"type":"string"}}},"tokenchain.core.v1.MsgDeleteUserResponse":{"description":"MsgDeleteUserResponse defines the MsgDeleteUserResponse message.","type":"object"},"tokenchain.core.v1.MsgUpdateParams":{"description":"MsgUpdateParams is the Msg/UpdateParams request type.","type":"object","properties":{"authority":{"description":"authority is the address that controls the module (defaults to x/gov unless overwritten).","type":"string"},"params":{"description":"NOTE: All parameters must be supplied.","$ref":"#/definitions/tokenchain.core.v1.Params"}}},"tokenchain.core.v1.MsgUpdateParamsResponse":{"description":"MsgUpdateParamsResponse defines the response structure for executing a\nMsgUpdateParams message.","type":"object"},"tokenchain.core.v1.MsgUpdateUser":{"description":"MsgUpdateUser defines the MsgUpdateUser message.","type":"object","properties":{"address":{"type":"string"},"creator":{"type":"string"},"description":{"type":"string"},"index":{"type":"string"},"username":{"type":"string"}}},"tokenchain.core.v1.MsgUpdateUserResponse":{"description":"MsgUpdateUserResponse defines the MsgUpdateUserResponse message.","type":"object"},"tokenchain.core.v1.Params":{"description":"Params defines the parameters for the module.","type":"object"},"tokenchain.core.v1.QueryAllUserResponse":{"description":"QueryAllUserResponse defines the QueryAllUserResponse message.","type":"object","properties":{"pagination":{"$ref":"#/definitions/cosmos.base.query.v1beta1.PageResponse"},"user":{"type":"array","items":{"type":"object","$ref":"#/definitions/tokenchain.core.v1.User"}}}},"tokenchain.core.v1.QueryGetUserResponse":{"description":"QueryGetUserResponse defines the QueryGetUserResponse message.","type":"object","properties":{"user":{"$ref":"#/definitions/tokenchain.core.v1.User"}}},"tokenchain.core.v1.QueryParamsResponse":{"description":"QueryParamsResponse is response type for the Query/Params RPC method.","type":"object","properties":{"params":{"description":"params holds all the parameters of this module.","$ref":"#/definitions/tokenchain.core.v1.Params"}}},"tokenchain.core.v1.User":{"description":"User defines the User message.","type":"object","properties":{"address":{"type":"string"},"creator":{"type":"string"},"description":{"type":"string"},"index":{"type":"string"},"username":{"type":"string"}}}},"tags":[{"name":"Query"},{"name":"Msg"}]}
