# x/core/types/codec.go
@@ -1,13 +1,18 @@
 package types
 
 import (
-    
 	codectypes "github.com/cosmos/cosmos-sdk/codec/types"
 	sdk "github.com/cosmos/cosmos-sdk/types"
 	"github.com/cosmos/cosmos-sdk/types/msgservice"
 )
 
 func RegisterInterfaces(registrar codectypes.InterfaceRegistry) {
+	registrar.RegisterImplementations((*sdk.Msg)(nil),
+		&MsgCreateUser{},
+		&MsgUpdateUser{},
+		&MsgDeleteUser{},
+	)
+
 	registrar.RegisterImplementations((*sdk.Msg)(nil),
 		&MsgUpdateParams{},
 	)
